feat: update feat upload example
